# yast-audit-laf

./: .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  yast2-audit-laf.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am  auditd.scr
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-audit-laf.changes  yast2-audit-laf.spec
src/: AuditLaf.ycp  Makefile.am  audit-laf.desktop  audit-laf.ycp  audit-laf_auto.ycp  audit-laf_proposal.ycp  cmdline.ycp  complex.ycp  dialogs.ycp  helps.ycp  wizards.ycp
src/autoyast-rnc/: audit-laf.rnc
src/clients/: audit-laf.rb  audit-laf.ycp  audit-laf_auto.rb  audit-laf_proposal.rb
src/desktop/: audit-laf.desktop  org.opensuse.yast.AuditLAF.desktop
src/include/audit-laf/: cmdline.rb  complex.rb  complex.ycp  dialogs.rb  dialogs.ycp  helps.rb  helps.ycp  wizards.rb
src/modules/: AuditLaf.rb  AuditLaf.ycp
src/scrconf/: auditd.scr
testsuite/tests/: TestModule.out  TestModule.rb  TestModule.ycp
